--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,21 @@
             android:name=".FloatingWindowService"
             android:enabled="true"
             android:exported="false" />
+        <service
+            android:name=".TopActivityWatchingService"
+            android:enabled="true"
+            android:exported="false" />
+        <service
+            android:name=".TopActivityAccessibilityService"
+            android:enabled="@bool/use_accessibility_service"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
+            <intent-filter>
+                <action android:name="android.accessibilityservice.AccessibilityService" />
+            </intent-filter>
+            <meta-data
+                android:name="android.accessibilityservice"
+                android:resource="@xml/accessibility_top_activity" />
+        </service>
     </application>
 
 </manifest>
