--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,10 +35,14 @@ android {
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
+        debug {
+            buildConfigField "String", "STATIC_RES_HOST", "\"https://gandear.perqin.com/dev/v2/\""
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.main
+            buildConfigField "String", "STATIC_RES_HOST", "\"https://gandear.perqin.com/\""
         }
     }
 }
