--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ android {
     buildTypes {
         debug {
             buildConfigField "String", "STATIC_RES_HOST", "\"https://gandear.perqin.com/dev/v2/\""
+            signingConfig signingConfigs.main
         }
         release {
             minifyEnabled false
