--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,21 +29,21 @@ android {
         applicationId "com.perqin.gandear"
         minSdkVersion 14
         targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         debug {
-            buildConfigField "String", "STATIC_RES_HOST", "\"https://gandear.perqin.com/dev/v2/\""
+            buildConfigField "String", "STATIC_RES_HOST", "\"https://gandear.perqin.com/dev/\""
             signingConfig signingConfigs.main
         }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.main
-            buildConfigField "String", "STATIC_RES_HOST", "\"https://gandear.perqin.com/\""
+            buildConfigField "String", "STATIC_RES_HOST", "\"https://gandear.perqin.com/v2/\""
         }
     }
 }
